static/styles/zulip.css
/* ... */
.include-sender .message_edit_notice:before {
    content: "(";
}

.include-sender .message_edit_notice:after {
    content: ")";
}

.include-sender .message_time {
    top: -4px;
}

.message_time {
    display: block;
    font-size: 12px;
    color: #b1b1b1;
    vertical-align: middle;
    padding: 1px;
    font-weight: 400;
    position: absolute;
    right: -105px;
    line-height: 20px;
    text-align: right;
    -webkit-transition: background-color 2.7s ease-in, color 2.7s ease-in;
    -moz-transition: background-color 2.7s ease-in, color 2.7s ease-in;
    -o-transition: background-color 2.7s ease-in, color 2.7s ease-in;
    transition: background-color 2.7s ease-in, color 2.7s ease-in;
}

/* The way this overrides the menus with a background-color and a high
   z-index is kinda hacky, and requires some annoying color-matching,
   but it works. */
.alert-copied {
    position: absolute;
    right: -110px;
    font-size: 14px;
    color: #52c2af;
    background-color: white;
    z-index: 999;
    padding-left: 20px;
    padding-right: 40px;
    font-weight: 400;
    display: none;
}

.private-message .alert-copied {
    background-color: #f0f4f5;
}

.include-sender .alert-copied {
    top: -3px;
}

.status-time {
    top: 8px !important;
}

.message_controls {
    display: inline-block;
    position: absolute;
    top: 2px;
    right: -56px;
    z-index: 1;
}

.message_controls > div {
    opacity: 0;
    pointer-events: none;

    transition: all 0.2s ease;
}

.messagebox:hover .message_controls > div {
    opacity: 1;
    pointer-events: all;
}

.message_controls > div {
    padding: 0px 1px;
}

.include-sender .message_controls {
    top: -3px;
}

.message_data {
    vertical-align: top;
    text-align: left;
    padding: 0px;
    background-color: #fff;
    position: relative;
}

.message_header {
    vertical-align: middle;
    text-align: left;
    /* We can overflow-y if the font size gets big */
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: 600;
    line-height: 14px;
    position: relative;
    z-index: 0;
}

.message_list .recipient_row {
    background: #f1f1f1;
    border-bottom: 1px solid #e2e2e2;
    border-top: 1px solid #e2e2e2;
    margin-bottom: 10px;
}

.stream_label {
    display: inline-block;
    padding: 3px 4px 2px 4px;
    font-weight: normal;
    height: 17px;
    line-height: 17px;
    border-top-color: rgba(0, 0, 0, 0);
    border-right-color: rgba(0, 0, 0, 0);
    border-bottom-color: rgba(0, 0, 0, 0);
    background-color: #e2e2e2;
    border-left-color: #e2e2e2;
    border-width: 0px;
    position: relative;
    text-decoration: none;
}

.stream_label .invite-stream-icon {
    font-size: 12px;
    line-height: 17px;
}

.message_list .stream_label {
    margin-left: 0px;
}

.stream_label:hover {
    color: inherit !important;
    text-decoration: none;
}

.stream_label:after {
    left: 100%;
    top: 50%;
    content: " ";
    height: 0px;
    width: 0px;
    position: absolute;
    pointer-events: none;
    margin-top: -11px;
    border-style: solid;
    border-width: 11px 0 11px 5px;
    border-color: inherit;
    z-index: 2;
    -moz-transform: scale(.9999);
}

.stream_label:before {
    left: 100%;
    top: 50%;
    content: " ";
    height: 0px;
    width: 0px;
    position: absolute;
    pointer-events: none;
    margin-top: -14px;
    border-style: solid;
    border-width: 14px 0 14px 6px;
    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #ffffff;
    z-index: 1;
    -moz-transform: scale(.9999);
}

.stream_topic {
    display: inline-block;
    padding: 3px 6px 2px 12px;
    margin-left: -5px;
    height: 17px;
    line-height: 17px;
}

.recipient_row_date {
    position: absolute;
    right: 0;
    top: 0;

    color: #888;
    font-size: 12px;
    font-weight: 600;
    padding: 3px 11px 2px 10px;
    height: 17px;
    line-height: 17px;
}

.recipient_row_date.hide-date {
    display: none;
}

.floating_recipient .recipient_row_date.hide-date {
    display: block;
}

.summary_row .message_header {
    padding: 5px 0px 4px 5px;
}

.summary_row .message_header {
    border-radius: 0;
}

.bookend_tr + .summary_row .message_header {
    border-top-right-radius: 3px;
}

.bookend_tr + .summary_row .summary_colorblock {
    border-top-left-radius: 3px;
}

.summary_row.last_message .message_header {
    border-bottom-right-radius: 3px;
    box-shadow: inset 0px 2px 1px -2px #333, inset -2px 0px 1px -2px #333, inset 0px -2px 1px -2px #333;
}

.summary_row.last_message .summary_colorblock {
    border-bottom-left-radius: 3px;
}

.message_header .icon-vector-narrow {
    font-size: 0.6em;
    position: relative;
    top: -1px;
}

.copy-paste-text {
    /* Hide the text that we want copy paste to capture */
    position: absolute;
    text-indent: -99999px;
    float: left;
    width: 0px;
}

.message_header_colorblock {
    border-radius: 3px 0px 0px 0px;
    /* box-shadow: 0px 2px 3px #ccc; */
    box-shadow: inset 0px 2px 1px -2px #333, inset 2px 0px 1px -2px #333 !important;
}

.summary_row_private_message .summary_colorblock {
    background: #000;
}

.messages-expand,
.messages-collapse {
    cursor: pointer;
}

/*
   We can't collapse the floating recipient bar yet, so this is
   just a temporary hack.
*/
.floating_recipient .messages-collapse {
    display: none;
}

.message_failed .rotating {
    display: inline-block;

    -webkit-animation: rotate 1s infinite linear;
    -moz-animation: rotate 1s infinite linear;
    -ms-animation: rotate 1s infinite linear;
    -o-animation: rotate 1s infinite linear;
    animation: rotate 1s infinite linear;
}

@-webkit-keyframes rotate {
    from {
        -webkit-transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(359deg);
    }
}

@-moz-keyframes rotate {
    from {
        -moz-transform: rotate(0deg);
    }
    to {
        -moz-transform: rotate(359deg);
    }
}
/* ... */

